#740: correct tests