@@ -6,7 +6,7 @@ import java.io.IOException;
 import java.nio.file.Paths;
 import java.time.OffsetDateTime;
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 
 import org.apache.commons.io.FileUtils;
 import org.testng.Assert;
@@ -43,7 +43,7 @@ public class TestVideoUtils extends GenericTest {
 		step.setVideoTimeStamp(1000);
 		Assert.assertEquals(step.getSnapshots().size(), 0);
 		
-		VideoUtils.extractReferenceForSteps(createVideoFileFromResource("tu/env.ini"), Arrays.asList(step), Paths.get(SeleniumTestsContextManager.getThreadContext().getVideoOutputDirectory()));
+		VideoUtils.extractReferenceForSteps(createVideoFileFromResource("tu/env.ini"), List.of(step), Paths.get(SeleniumTestsContextManager.getThreadContext().getVideoOutputDirectory()));
 		
 	}
 	
@@ -61,7 +61,7 @@ public class TestVideoUtils extends GenericTest {
 		step.setVideoTimeStamp(1000);
 		Assert.assertEquals(step.getSnapshots().size(), 0);
 		
-		VideoUtils.extractReferenceForSteps(createVideoFileFromResource("tu/video/videoCapture.avi"), Arrays.asList(step), Paths.get(SeleniumTestsContextManager.getThreadContext().getVideoOutputDirectory()));
+		VideoUtils.extractReferenceForSteps(createVideoFileFromResource("tu/video/videoCapture.avi"), List.of(step), Paths.get(SeleniumTestsContextManager.getThreadContext().getVideoOutputDirectory()));
 		
 		Assert.assertEquals(step.getSnapshots().size(), 1);
 		Assert.assertEquals(step.getSnapshots().get(0).getName(), "Step beginning state");
@@ -77,12 +77,12 @@ public class TestVideoUtils extends GenericTest {
 		OffsetDateTime videoStartDateTime = OffsetDateTime.parse("2021-11-15T13:15:30+01:00");
 		
 		TestStepManager.getInstance().setVideoStartDate(videoStartDateTime);
-		TestStep step = new TestStep("step 1", "step 1", this.getClass(), null, new ArrayList<String>(), false);
+		TestStep step = new TestStep("step 1", "step 1", this.getClass(), null, new ArrayList<>(), false);
 		step.setStartDate(videoStartDateTime.plusSeconds(100));
 		step.setVideoTimeStamp(100000);
 		Assert.assertEquals(step.getSnapshots().size(), 0);
 		
-		VideoUtils.extractReferenceForSteps(createVideoFileFromResource("tu/video/videoCapture.avi"), Arrays.asList(step), Paths.get(SeleniumTestsContextManager.getThreadContext().getVideoOutputDirectory()));
+		VideoUtils.extractReferenceForSteps(createVideoFileFromResource("tu/video/videoCapture.avi"), List.of(step), Paths.get(SeleniumTestsContextManager.getThreadContext().getVideoOutputDirectory()));
 		
 		Assert.assertEquals(step.getSnapshots().size(), 0);
 		
@@ -102,7 +102,7 @@ public class TestVideoUtils extends GenericTest {
 		step.setVideoTimeStamp(1000);
 		Assert.assertEquals(step.getSnapshots().size(), 0);
 		
-		VideoUtils.extractReferenceForSteps(createVideoFileFromResource("tu/video/videoCapture.avi"), Arrays.asList(step), Paths.get(SeleniumTestsContextManager.getThreadContext().getVideoOutputDirectory()));
+		VideoUtils.extractReferenceForSteps(createVideoFileFromResource("tu/video/videoCapture.avi"), List.of(step), Paths.get(SeleniumTestsContextManager.getThreadContext().getVideoOutputDirectory()));
 		
 		Assert.assertEquals(step.getSnapshots().size(), 0);
 		
@@ -126,7 +126,7 @@ public class TestVideoUtils extends GenericTest {
 		Assert.assertEquals(step.getSnapshots().size(), 0);
 		Assert.assertEquals(step2.getSnapshots().size(), 0);
 		
-		VideoUtils.extractReferenceForSteps(createVideoFileFromResource("tu/video/videoCapture.avi"), Arrays.asList(step, step2), Paths.get(SeleniumTestsContextManager.getThreadContext().getVideoOutputDirectory()));
+		VideoUtils.extractReferenceForSteps(createVideoFileFromResource("tu/video/videoCapture.avi"), List.of(step, step2), Paths.get(SeleniumTestsContextManager.getThreadContext().getVideoOutputDirectory()));
 		
 		Assert.assertEquals(step.getSnapshots().size(), 0);
 		Assert.assertEquals(step2.getSnapshots().size(), 1);
